[gd_scene load_steps=5 format=3 uid="uid://6511h840dpyr"]

[ext_resource type="PackedScene" uid="uid://176g3cp8n76a" path="res://scenes/block_window/block_environment/g_block_schema/g_block/g_block.tscn" id="1_x54yn"]
[ext_resource type="Script" path="res://scenes/block_window/block_environment/g_block_schema/block_join/g_block_join.gd" id="2_jw1ja"]
[ext_resource type="PackedScene" uid="uid://cq3i7td46je11" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_end_point.tscn" id="3_5wr1i"]
[ext_resource type="PackedScene" uid="uid://dvd6ysg6qyrj2" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_begin_point.tscn" id="4_atv1g"]

[node name="GBlockJoin" instance=ExtResource("1_x54yn")]
script = ExtResource("2_jw1ja")

[node name="Control" parent="." index="0"]
offset_left = -109.5
offset_top = -70.0
offset_right = 109.5
offset_bottom = 70.0

[node name="Type" parent="Control/MarginContainer/Content" index="1"]
text = "Блок объединения"

[node name="EndPointAmountContainer" type="HBoxContainer" parent="Control/MarginContainer/Content" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/Content/EndPointAmountContainer" index="0"]
layout_mode = 2
text = "Число входов"

[node name="SpinBox" type="SpinBox" parent="Control/MarginContainer/Content/EndPointAmountContainer" index="1"]
layout_mode = 2
min_value = 1.0
max_value = 1.0
value = 1.0
allow_greater = true

[node name="AcceptButton" type="Button" parent="Control/MarginContainer/Content" index="3"]
layout_mode = 2
text = "Применить"

[node name="GEndPoint" parent="EndPoints" index="0" instance=ExtResource("3_5wr1i")]
position = Vector2(-1, -71)

[node name="GBeginPoint" parent="BeginPoints" index="0" instance=ExtResource("4_atv1g")]
position = Vector2(0, 71)

[connection signal="pressed" from="Control/MarginContainer/Content/AcceptButton" to="." method="_on_accept_button_pressed"]
